# voxel-engine

./: CMakeLists.txt  README.md
inc/graphics/: buffer.h  program.h  shader.h  texture.h  vertex_array.h
inc/utility/: angle.h  scope_guard.h  unique_resource.h
inc/world/: chunk.h  cube.h  frustrum.h
res/: simple.frag  simple.vert
src/: main.cpp
src/graphics/: buffer.cpp  program.cpp  shader.cpp  texture.cpp  vertex_array.cpp
src/world/: cube.cpp
